# RobotCode2024

./: .gitignore  Choreo_PotentialAutos.chor  Choreo_Test.chor  Earthfile  LICENSE  PrestoShotMap.xlsx  README.md  build.gradle
.github/workflows/: build.yml  vts.yml
.pathplanner/: settings.json
Robot_MA24B/: config.json
ascope_assets/Joystick_6328Console/: config.json
ascope_assets/Robot_MA24B/: config.json
ascope_assets/Robot_Presto/: config.json
battery_scanner/: conda_env.yml  scanner.py
logs/: Log_101b29565a91cf5f.wpilog
src/main/: Potential Autos.chor  Test.chor
src/main/deploy/apriltags/: 2024-amps.json  2024-official.json  2024-speakers.json  2024-wpi-custom.json
src/main/deploy/choreo/: 3Centerline.traj  3Spike.traj  3SpikeSmooth.traj  4NoteOptimized.traj  (+7 more)
trajectory_native/: .gitignore  CMakeLists.txt  Earthfile  build_casadi.sh  build_ipopt.sh  build_trajoptlib.sh  build_vts.sh  mingw-w64.cmake  trajoptlib-CMakeLists.txt  trajoptlib-aarch64.patch
trajectory_native/.devcontainer/: devcontainer.json
trajectory_native/proto/: VehicleTrajectoryService.proto
trajectory_native/src/: trajectory_service.cpp
vendordeps/: AdvantageKit.json  REVLib.json
vision/: Earthfile  numpy-aarch64-linux-gnu-site.cfg
vision/northstar/: __init__.py  config.json
vision/northstar/config/: ConfigSource.py  config.py
vision/northstar/output/: OutputPublisher.py
vision/northstar/pipeline/: Capture.py
vision/pose_calib/: 6328-INSTRUCTIONS.TXT  convert_calib.py  distvis.py  pose_calib.py  ui.py  utils.py
vision/pose_calib/data/: calib_config.yml
(+285 files in other folders)
